feat-#146: added admin ui screens

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,10 +3,10 @@
 @tailwind utilities;
 
 @layer components {
-  .scale-hover {
+  .scale-hover:hover {
     transform: scale(1.12);
   }
-  .scale-click {
+  .scale-click:active {
     transform: scale(0.95);
   }
 }
